[package]
name = "shrew-cpu"
description = "CPU backend implementation for Shrew"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shrew-core.workspace = true
num-traits.workspace = true
rayon.workspace = true
rand.workspace = true
rand_distr.workspace = true
gemm.workspace = true
half.workspace = true
